# Qwen2.5OmniEmo

./: .gitignore  ReadMe.txt  build_EMO_dataset_from_txt.py  download_hf.py  ds_zero2_bf16.json  github推送设置  qwen2.5omni.yml  run_command  sitecustomize.py  user_prompt.txt  环境安装顺序！！！
LLaMA-Factory/: qwen2_5_full_sft.yaml  qwen2_5_full_sft_resume.yaml  qwen2_5_full_sft_test.yaml
LLaMA-Factory/data/: dataset_info.json
LLaMA-Factory/data/dataset/lemon/annotation/: Readme.txt  built_test.jsonl  built_test_for_debug.jsonl  built_train_10.jsonl  train_streaming.json  train_unstreaming.json  vid_0004_clip1.json
LLaMA-Factory/src/llamafactory/: launcher.py
LLaMA-Factory/src/llamafactory.egg-info/: PKG-INFO  requires.txt
LLaMA-Factory/src/llamafactory/data/: collator.py  loader.py  mm_plugin.py  mm_plugin_backup.py
LLaMA-Factory/src/llamafactory/hparams/: model_args.py
demo_videollm_online/: inference.py
demos/: app.py  demo_emotion_fake_stream.py  demo_emotion_stream.py  live_infer.py  merge_lora.py  utils.py
preds/lemon_train_all/: all_results.json  generated_predictions.jsonl
scripts/: emotion_stream_eval.py  prompt.txt  routeA_stream_infer_debug.py
transformers/: pyproject.toml
transformers/models/qwen2_5_omni/: modeling_qwen2_5_omni.py  processing_qwen2_5_omni.py
transformers/transformers.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
